--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.ToolbarActivity">
 
-    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
+    <include layout="@layout/component_toolbar" android:id="@+id/toolbar"/>
 
 
 </RelativeLayout>
