Added notification sending service and handler

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Base mApplication theme. -->
     <style name="MaterialTheme" parent="ParentMaterialTheme">
 
     </style>
